objects/Account.object
<CustomObject>
    <fields>
        <fullName>IPM_ABN__c</fullName>
        <label>ABN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_ANZSIC_Code__c</fullName>
        <label>ANZSIC Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IPM_ANZSIC_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_APRA_Regulated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APRA Regulated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Annual_Review_Finalisation_Date__c</fullName>
        <inlineHelpText>The latest Annual Review Finalisation Date for an Insurer.</inlineHelpText>
        <label>Annual Review Finalisation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Audit_Completed_Date__c</fullName>
        <label>Last Audit Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Benchmarking_Group__c</fullName>
        <label>Benchmarking Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Business_Plan_Approved_Date__c</fullName>
        <description>This is the most recent date that an Insurer Review Process with Record Type = LIBPG Business Plan had the value for Process Outcome set to Approved.</description>
        <inlineHelpText>This is the most recent date that the LIBPG Business Plan was approved.</inlineHelpText>
        <label>Last Date Business Plan Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Claims_Management_Outsourced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claims Management Outsourced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Claims_Outsourcing_Provider_Name__c</fullName>
        <label>Claims Outsourcing Provider Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Current_Licence_Expiry_Date__c</fullName>
        <formula>IPM_Current_Licence__r.GLS_expiryDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Licence Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Current_Licence_Status__c</fullName>
        <formula>TEXT(IPM_Current_Licence__r.IPM_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Licence Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Current_Licence_Term__c</fullName>
        <formula>TEXT(IPM_Current_Licence__r.IPM_Term__c) &amp; &quot; &quot; &amp; TEXT( IPM_Current_Licence__r.IPM_Term_Units__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Licence Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Current_Licence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Licence</label>
        <referenceTo>GLS_Licence__c</referenceTo>
        <relationshipLabel>Accounts (Current Licence)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Deemed_Premium__c</fullName>
        <label>Deemed Premium</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IPM_Financial_Reports_Issued_By__c</fullName>
        <label>Financial Reports Issued By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Financial_Year_End_Date__c</fullName>
        <formula>DATE(YEAR(TODAY()),
CASE( TEXT(IPM_Financial_Year_End_Month__c),
&quot;January&quot;, 01,
&quot;February&quot;, 02,
&quot;March&quot;, 03,
&quot;April&quot;, 04,
&quot;May&quot;, 05,
&quot;June&quot;, 06,
&quot;July&quot;, 07,
&quot;August&quot;, 08,
&quot;September&quot;, 09,
&quot;October&quot;, 10,
&quot;November&quot;, 11,
&quot;December&quot;, 12, 01)
, VALUE(TEXT(IPM_Financial_Year_End_Day__c)) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Year End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Financial_Year_End_Day__c</fullName>
        <label>Financial Year End Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Financial_Year_End_Month__c</fullName>
        <label>Financial Year End Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Injury_Management_Plan_Approval_Date__c</fullName>
        <label>Injury Management Plan Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Insured_in_Other_States__c</fullName>
        <label>Insured in Other States</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VIC</fullName>
                </value>
                <value>
                    <fullName>QLD</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>NT</fullName>
                </value>
                <value>
                    <fullName>WA</fullName>
                </value>
                <value>
                    <fullName>ACT</fullName>
                </value>
                <value>
                    <fullName>TAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_MPPG_Approval_Date_Specialised_NI__c</fullName>
        <label>MPPG Approval Date (Specialised/NI)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Outstanding_Claims__c</fullName>
        <label>Outstanding Claims</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IPM_S_Drive_Folder__c</fullName>
        <inlineHelpText>The folder location on the share drive for the Insurer.</inlineHelpText>
        <label>S Drive Folder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Security_Amount__c</fullName>
        <inlineHelpText>Total Security Held for Insurer</inlineHelpText>
        <label>Security Amount</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IPM_Security_Lodgement_Date__c</fullName>
        <inlineHelpText>Last lodgement date verified by Finance</inlineHelpText>
        <label>Security Lodgement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Tier_Level__c</fullName>
        <label>Tier Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>Not Yet Rated</fullName>
                    <default>true</default>
                    <label>Not Yet Rated</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Today__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_WIC_Subdivision__c</fullName>
        <label>WIC Subdivision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IPM_WIC_Subdivision</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Workplace_Insurer_Process_Exemption__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Insurers with this checked are exempt from MPPG Review, Claims Management Self Audit and LIBPG Business Plan.</inlineHelpText>
        <label>Workplace Insurer Process Exemption</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Workplace_Insurer_Status__c</fullName>
        <label>Workplace Insurer Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospective</fullName>
                    <default>true</default>
                    <label>Prospective</label>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Workplace_Insurer_Type__c</fullName>
        <label>Workplace Insurer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IPM_Workplace_Insurer_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Workplace_Insurer__c</fullName>
        <formula>IF(NOT(ISNULL(TEXT( IPM_Workplace_Insurer_Type__c ))), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is checked if a Workplace Insurer Type has been selected.</inlineHelpText>
        <label>Workplace Insurer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_iCare_Reporting_Group__c</fullName>
        <description>&quot;iCare&quot; group contains iCare Accounts.
&quot;SICorp&quot; group contains SICorp Accounts and SICorp Agent Accounts.
&quot;Nominal&quot; group contains Nominal Insurer Accounts and Nominal Scheme Agent Accounts.</description>
        <formula>IF( TEXT(IPM_Workplace_Insurer_Type__c) = &quot;iCare&quot;, &quot;iCare&quot;, 
IF(TEXT(IPM_Workplace_Insurer_Type__c) = &quot;Nominal Insurer&quot; ||  TEXT(Parent.IPM_Workplace_Insurer_Type__c)  = &quot;Nominal Insurer&quot;, &quot;Nominal&quot;,
IF(TEXT(IPM_Workplace_Insurer_Type__c) = &quot;SICorp&quot; ||  TEXT(Parent.IPM_Workplace_Insurer_Type__c)  = &quot;SICorp&quot;, &quot;SICorp&quot;,&quot;N/A&quot;)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>iCare Reporting Group</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>IPM_Workplace_Insurer_Type__c</columns>
        <columns>IPM_Workplace_Insurer_Status__c</columns>
        <columns>IPM_Current_Licence_Status__c</columns>
        <columns>IPM_S_Drive_Folder__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>IPM_Workplace_Insurer_Type__c</columns>
        <columns>IPM_Workplace_Insurer_Status__c</columns>
        <columns>IPM_Current_Licence_Status__c</columns>
        <columns>IPM_S_Drive_Folder__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>IPM_Business</fullName>
        <active>true</active>
        <description>Any type of Business Account, eg. Workplace Insurer, Medical Insurer, etc.</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>IPM_Internal</fullName>
        <active>true</active>
        <description>Used to capture teams such as SME Groups for internal processing</description>
        <label>Internal</label>
    </recordTypes>
    <recordTypes>
        <fullName>IPM_Subsidiary</fullName>
        <active>true</active>
        <description>A Company that is a subsidiary of a Business Account.</description>
        <label>Subsidiary</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>IPM_Claims_Outsourcing_Provider_required</fullName>
        <active>true</active>
        <description>If the Account is a Workplace Insurer and Claims Management Outsource is true then Claims Outsourcing Provided Name must be populated.</description>
        <errorConditionFormula>IPM_Workplace_Insurer__c = true &amp;&amp;  IPM_Claims_Management_Outsourced__c = true &amp;&amp; ISNULL( IPM_Claims_Outsourcing_Provider_Name__c )</errorConditionFormula>
        <errorMessage>Please enter the Claims Outsourcing Provider Name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IPM_Financial_Year_End_Date_Not_Valid</fullName>
        <active>true</active>
        <description>Display an error if the Financial Year End Day/Month combination is not valid</description>
        <errorConditionFormula>(TEXT(IPM_Financial_Year_End_Month__c) = &quot;February&quot; &amp;&amp;  (TEXT(IPM_Financial_Year_End_Day__c) = &quot;30&quot; || TEXT(IPM_Financial_Year_End_Day__c) = &quot;31&quot;)) ||
(TEXT(IPM_Financial_Year_End_Month__c) = &quot;April&quot; &amp;&amp;  TEXT(IPM_Financial_Year_End_Day__c) = &quot;31&quot;) ||
(TEXT(IPM_Financial_Year_End_Month__c) = &quot;June&quot; &amp;&amp;  TEXT(IPM_Financial_Year_End_Day__c) = &quot;31&quot;) ||
(TEXT(IPM_Financial_Year_End_Month__c) = &quot;September&quot; &amp;&amp;  TEXT(IPM_Financial_Year_End_Day__c) = &quot;31&quot;) ||
(TEXT(IPM_Financial_Year_End_Month__c) = &quot;June&quot; &amp;&amp;  TEXT(IPM_Financial_Year_End_Day__c) = &quot;31&quot;)</errorConditionFormula>
        <errorMessage>Please select a valid Financial Year End Day/Month</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IPM_Workplace_Insurer_ABN_required</fullName>
        <active>true</active>
        <description>If the Account is a Workplace Insurer then ABN must be populated.</description>
        <errorConditionFormula>IPM_Workplace_Insurer__c = true &amp;&amp;  ISNULL( IPM_ABN__c )</errorConditionFormula>
        <errorMessage>Please enter the ABN.</errorMessage>
    </validationRules>
</CustomObject>